--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,7 +131,7 @@ h6 {
 --------------------------------------------------------------*/
 .header {
   --background-color: rgba(0, 0, 0, 0.8);
-  --default-color: #ffffff;
+  --default-color: #ffffff;	
   --heading-color: #ffffff;
   color: var(--default-color);
   background-color: var(--background-color);
@@ -1678,4 +1678,81 @@ section,
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
+}
+
+
+/*--------------------------------------------------------------
+# tableau
+--------------------------------------------------------------*/
+.tableauPlaceholder {
+    width: 900%;
+    height: 900%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.section-title-tab {
+  text-align: center;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.section-title-tab h2 {
+  font-size: 32px;
+  font-weight: 300;
+  margin-bottom: 0px;
+}
+
+.section-title-tab p {
+  margin-bottom: 0;
+}
+
+
+.moving-text {
+    animation: moveRight 14s linear infinite;
+    white-space: nowrap;
+    font-size: 24px;
+    color: #000000;
+    overflow: hidden;
+    position: relative;
+    left: 100%;
+	pointer-events: none; 
+	z-index: 10;
+}
+
+@keyframes moveRight {
+    0% {
+        left: -100%;
+		0% { transform: translateY(0); }
+				
+    }
+    100% {
+        left: 100%;
+		100% { transform: translateY(0); }
+    }
+}
+
+.moving-text-new {
+    animation: moveRight 14s linear infinite;
+    white-space: nowrap;
+    font-size: 24px;
+    color: #000000;
+    overflow: hidden;
+    position: relative;
+    left: 100%;
+	pointer-events: none; 
+	z-index: 10;
+}
+
+@keyframes moveRight {
+    0% {
+        left: -100%;
+		0% { transform: translateY(0); }
+				
+    }
+    100% {
+        left: 100%;
+		100% { transform: translateY(0); }
+    }
 }
